# curlpipe

./: Containerfile  LICENSE  README.md  compose.yml  setup.cfg
.github/workflows/: build.yaml  lint.yaml
curlpipe/: __init__.py  __main__.py  curlpipe.py
scripts/: bad.sh  good.sh
