[metadata]
name = curlpipe
version = 0.1.0
description = do NOT curl | bash
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
platforms = any
author = Benjamin Akhras
url = http://github.com/b3n4kh/curlpipe
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.11

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.7
install_requires =
    numpy
    black
    flake8

[flake8]
max-line-length = 142
